2022-08-30T00:37:48Z:
* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2952737907
* notice: last 14d: unq all: 8 13
* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 44 53
* notice: next accum: outdated-unq outdated-all / unq all: 42 49 / 51 62
* notice: prev exec diff / last date diff / accum: unq all: +7 +9 -0 -0 / +7 +9 -0 -0 / 7 9
* notice: removed / changed dates: [] / [2022-08-29]

2022-08-26T16:01:47Z:
* notice: last 14d: unq all: 2 4
* notice: prev accum: outdated-unq outdated-all / unq all: 37 43 / 40 48
* notice: next accum: outdated-unq outdated-all / unq all: 42 49 / 44 53
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-12] / []

2022-08-26T08:07:25Z:
* notice: last 14d: unq all: 3 5
* notice: prev accum: outdated-unq outdated-all / unq all: 37 43 / 44 53
* notice: next accum: outdated-unq outdated-all / unq all: 37 43 / 40 48
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -4 -5 / +5 +6 -4 -5 / 1 1
* notice: removed / changed dates: [] / [2022-08-12]

2022-08-24T00:32:36Z:
* notice: last 14d: unq all: 7 10
* notice: prev accum: outdated-unq outdated-all / unq all: 36 42 / 44 53
* notice: next accum: outdated-unq outdated-all / unq all: 37 43 / 44 53
* notice: prev exec diff / last date diff / accum: unq all: +0 +0 -0 -0 / +0 +0 -0 -0 / 0 0
* notice: removed / changed dates: [2022-08-09] / []

2022-08-22T16:01:23Z:
* notice: last 14d: unq all: 8 11
* notice: prev accum: outdated-unq outdated-all / unq all: 36 42 / 43 51
* notice: next accum: outdated-unq outdated-all / unq all: 36 42 / 44 53
* notice: prev exec diff / last date diff / accum: unq all: +1 +2 -0 -0 / +1 +2 -0 -0 / 1 2
* notice: removed / changed dates: [] / [2022-08-22]

2022-08-18T08:06:54Z:
* notice: last 14d: unq all: 7 9
* notice: prev accum: outdated-unq outdated-all / unq all: 35 41 / 42 49