@@ -1,9 +1,9 @@
 {
-  "timestamp" : "2022-08-30T00:37:48Z",
+  "timestamp" : "2022-08-31T00:37:46Z",
   "count_outdated" : 49,
   "uniques_outdated" : 42,
-  "count" : 62,
-  "uniques" : 51,
+  "count" : 69,
+  "uniques" : 57,
   "clones" : [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -25,6 +25,13 @@
       "count_minmax": [ 9, 9 ],
       "uniques": 7,
       "uniques_minmax": [ 7, 7 ]
+    },
+    {
+      "timestamp": "2022-08-30T00:00:00Z",
+      "count": 7,
+      "count_minmax": [ 7, 7 ],
+      "uniques": 6,
+      "uniques_minmax": [ 6, 6 ]
     }
   ]
 }
