@@ -1,6 +1,6 @@
 {
-  "count": 13,
-  "uniques": 8,
+  "count": 20,
+  "uniques": 11,
   "clones": [
     {
       "timestamp": "2022-08-18T00:00:00Z",
@@ -16,6 +16,11 @@
       "timestamp": "2022-08-29T00:00:00Z",
       "count": 9,
       "uniques": 7
+    },
+    {
+      "timestamp": "2022-08-30T00:00:00Z",
+      "count": 7,
+      "uniques": 6
     }
   ]
 }
