@@ -1,3 +1,11 @@
+2022-08-31T00:37:46Z:
+* notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2960540541
+* notice: last 14d: unq all: 11 20
+* notice: prev accum: outdated-unq outdated-all / unq all: 42 49 / 51 62
+* notice: next accum: outdated-unq outdated-all / unq all: 42 49 / 57 69
+* notice: prev exec diff / last date diff / accum: unq all: +6 +7 -0 -0 / +6 +7 -0 -0 / 6 7
+* notice: removed / changed dates: [] / [2022-08-30]
+
 2022-08-30T00:37:48Z:
 * notice: GitHub Actions Run URL: https://github.com/andry81-devops/andry81-devops/actions/runs/2952737907
 * notice: last 14d: unq all: 8 13
